--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
   "homepage": "https://github.com/harishpariyar07/ProShop-Ecommerce#readme",
   "dependencies": {
     "axios": "^1.2.1",
+    "colors": "^1.4.0",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongoose": "^6.8.1"
   },
   "devDependencies": {
     "concurrently": "^7.6.0",
