--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
   "homepage": "https://github.com/harishpariyar07/ProShop-Ecommerce#readme",
   "dependencies": {
     "axios": "^1.2.1",
+    "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
     "mongoose": "^6.8.1"
   },
   "devDependencies": {
