--- a/package.json
+++ b/package.json
@@ -33,7 +33,10 @@
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.1",
-    "multer": "^1.4.5-lts.1"
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "stripe": "^12.8.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "concurrently": "^7.6.0",
